<resources>
    <string name="app_name">TTM</string>
    <string name="description">Nature, in the broadest sense, is the natural, physical, or material world or universe. \"Nature\" can refer to the phenomena of the physical world, and also to life in general. The study of nature is a large, if not the only, part of science. Although humans are part of nature, human activity is often understood as a separate category from other natural phenomena.\n </string>
    <string name="point1_title">Utilization Of Available Resources - An Action Oriented Programme</string>
    <string name="point2_title">Setting Up A Consumer Cooperative Store, A Consumer Outlet For Purchase Of Day  To Day Consumption Items</string>
    <string name="point3_title">Capacity building of rural women in tailoring</string>
    <string name="point4_title">Evaluation of Smokeless Chulhas installed</string>
    <string name="point5_title">Capacity building on income generating avenues</string>
    <string name="point6_title">Capacity building on income generating avenues</string>
    <string name="point7_title">Fuel Saving Technology-Thermal Efficiency of different kinds of fuel woods</string>
    <string name="point8_title">TRYSEM project on tailoring (Garment making)</string>
    <string name="point9_title">Effect of kitchen organization on  time spent, distance covered and posture variations during cooking</string>
    <string name="point10_title">Ergonomic studies-Drudgery reduction in Home, farm and allied activities </string>
    <string name="point11_title">Ergonomics of Farm Women’s Drudgery- Ergonomic assessment of Wheat Harvesting and Cutting and collecting fodder Activity</string>
    <string name="point12_title">Ergonomic Assessment of Briquetting</string>
    <string name="point13_title">Ergonomic Assessment of Maize Shelling Activity</string>
    <string name="point14_title">Ergonomic Assessment of Drudgery Prone Activity Cleaning and Grading of Wheat</string>
    <string name="point15_title"> Ergonomic Assessment of Hand Operated Maize Sheller</string>
    <string name="point16_title">Vadi Maker</string>
    <string name="point17_title">Cotton Picking Machine</string>
    <string name="point18_title">Cotton Stalk Puller</string>
    <string name="point19_title">Single Line Ground Nut Stripper</string>
    <string name="point20_title">Comb Stripper for Groundnuts</string>
    <string name="point21_title">FiberKelu (Roof Tile)</string>
    <string name="point22_title">Multipurpose Harvest Bag and Capron</string>
    <string name="point23_title">AARAM - Cushioned Seat</string>
    <string name="point24_title">Harvest Apron &amp; vegetable Plucker: An Asset for the Women Farmers</string>
    <string name="point25_title">Manual Sapling Transplanter</string>
    <string name="point25_bb">Transplantation is the process of transplanting specifically raised saplings or seedlings on the field with desired spacing. Transplanting and planting vegetables in traditional way, is a hard job and dependent on women farmer. In addition, land preparation and transplantation should be done in a period of short time as per season. Conventional method of transplanting is not a healthy method as the farmers have to bend from waist and stoop while transplanting saplings which cause health hazard later on.  Therefore, mechanical transplanting of vegetable’s seedlings is necessary to save labour, time and energy costs and to mitigate drudgery of women of extreme forward trunk flexion. Manual sapling transpalnter is a good option for this.
        </string>
    <string name="point25_td">A Sapling Trans planter was introduced to plant vegetable saplings and was field tested for its efficacy in comparison to back breaking conventional method of transplanting. It’s a simple manual tool, having a metallic tube. The trans planter has a hole at the bottom to plant in the standing position. A pair of trowels can penetrate in the soil as well as right through plastic mulching as well. In order to operate the tool, drop a seedling into guide tube, push the shut pair of trowels into the soil, grasp the latch and handle together and lift the tool straight up. The tool was tested for planting tomato saplings. The specific advantages of using the tool are:
        \nThe operator can stand straight (no need to bend down) for planting the seedling making the process easy.
        \nOne manual planter can equal 4 person’s working at a time providing high efficiency.
        \nIt can be used with single or both the hands.
        \nEconomical and easy to operate.
        \nSuitable not only for farmers but also for anyone who loves gardening.
        </string>
    <string name="point25_wf">
        The hand-held manual transplanter allows one person to plant hundreds of seedlings per hour.
        This tool can be used with prepared seed- beds either through plastic mulching sheets or bare soil.
        Used for planting seedlings of vegetables like, Tomato, Brinjal, and Chilly.</string>
    <string name="point25_performance">

        Convenient, time saving, improves Posture, reduced MSD
    </string>
    <string name="point25_ld">
        Rural areas of Udaipur and adjoining areas
    </string>
    <string name="point25_oib">
        The Physiological cost of work is reduced. Time Saved, Economical, Reduced MSD, Increased convenience.
    </string>
    <string name="point25_limitation">
        The transplanter base should be dry and field should be watered after transplanting the saplings
    </string>
    <string name="point25_source">
        DrSuman Singh &amp; DrHemuRathore
        \nAnnual Report, AICRP – FRM, College of H Sc, Udaipur
        \nPh 0294-2471914
        \nEmail: sumanfrm@gmail.com
        \nrathorehemu@rediffmail.com
        \nwebsite: www.dmfw.org
    </string>
    <string name="point25_dtf">
                 Tested and Refined
        </string>
    <string name="point25_Year">
        2015
    </string>
    <string name="point25_Cost">
        Rs 1800-3000
        \n(Difference is due to the fabrication material)
    </string>
    <string name="point25_fm"></string>
    <string name="point1_bb">
        AICRP was started in middle of 1980 in this University. The major objective of the research was to find out the available resources in the farm families of neighbouring villages of the Udaipur city. The emphasis was laid on the extent of utilization of available resources with following
Objectives :-\n
To gather information regarding availability of family resources and see how far villagers are aware about village resources.
\nTo know the extent of optimum utilization of resources, their waste and recycling.
\nTo become aware of the women’s role in the family in term of utilization of resources.
\nTo propose techniques/programmes for the proper use of resources.
\nTo study the impact of the techniques/programmesprogramme on resource utilization.


    </string>
    <string name="point1_td">
        Village resource inventory and family resource inventory was prepared in the year 1981 and was used to gather information from the selected villages
    </string>
    <string name="point1_wf">The inventory based trainings  were organized for the selected villages </string>
    <string name="point1_performance">Organizing various training programmes for the women in different areas of home making for proper utilization of resources for improving the standard of living.
\nImproving employment potentials of individual family
\nIntroducing appropriate improved technologies in relevant areas.
\nMotivation for mushroom plantation\n
Action oriented programme were taken up in villages which included
\nInstallation of hand pumps
\nInstallation of bio gas plants
\nInstallation of smokeless chullha    </string>
    <string name="point1_ld">
        Two PanchayatSamities adjacent to Udaipur were taken: Girwa and BadgaonPanchayatSamiti.\n
From these two tribal and two non-tribal villages were selected Forty families were randomly selected for the study from these villages.
    </string>
    <string name="point1_oib">
        Women were able to recognize scarce resources and learnt techniques to optimally utilize them.

    </string>
    <string name="point1_limitation">It was difficult to focus on all resources.</string>
    <string name="point1_source">
        AICRP on Home Science  (Family Resource Management)\n
MPUAT, Udaipur
    </string>
    <string name="point1_dtf">

        Trainings imparted and six Biogas plants installed initially as models.\n
Smokeless chulhas were installed in the selected farmers kitchens
    </string>
    <string name="point1_Year">1980-85</string>
    <string name="point1_Cost"></string>
    <string name="point1_fm"></string>
    <string name="point2_bb">The distributive trade of consumer goods is particularly in private hands. The traders in their business are actuated by the sole consideration of making profit and are often accused of malpractices. The problem is more acute in rural areas.
\nThe need for consumer’s cooperative stores was therefore as strong and imperative in rural areas as it was in towns and big cities as the chances and possibilities of exploitation are as much in villages as in the towns and in cities.
\nConsumer stores:These societies are all over the world which conducts retail sales of domestic requirement on cash basis laid down by model by laws.\n
The difference between the purchase price and the sale price after meeting the expenses of running the concern is treated as net profit, an important change on which is the distribution of bonus on purchases made by members during the year.</string>
    <string name="point2_td">In the repetitive visit to village the need of consumer cooperative was identified. It was thus planned to open an extension branch of consumer cooperative of College of Home Science, Udaipur. According to the plan an exhaustive list of consumer goods was made after surveying the villagers demand at all levels. The items of urgent demand were bought by college cooperative and later on when the cooperative started running in full swing, the amount was paid back to the college cooperative store. The articles then were purchased for the village cooperative store itself and by this time the articles of rare use like cloth etc. were also made available in the store. The working of cooperative store was based on certain principles for avoiding confusion. Three different registers namely, stock register, purchase register and register for daily sale were opened to maintain the accounts.</string>
    <string name="point2_wf">It was seen that villagers were paying comparatively higher prices to the village shop keepers for procuring the things in the village itself or otherwise they had to bring even small things, from the market which was not less than 20 kms in Udaipur city. Thus, the idea of providing consumers goods at reasonable price, a consumer cooperative was started in the village. A local youth then took responsibility of running the store after training.</string>
    <string name="point2_performance">It operated well in the operational village and based on its success a cooperative store was set up to sell vegetables grown in villages in the nearby city of Udaipur.
</string>
    <string name="point2_ld">Bujda village of BadgaonPanchyatSamiti of Udaipur district.</string>
    <string name="point2_oib">A successful   consumer cooperative store was established a village and youth were trained to run the store.</string>
    <string name="point2_limitation">It was difficult to identify a person to run the cooperative for the village.</string>
    <string name="point2_source">Late Dr P Sundaram and Dr Suman Singh
 \nAICRP on Home Science  (Family Resource Management)
\nMPUAT, Udaipur</string>
    <string name="point2_dtf">Established consumer cooperative store</string>
    <string name="point2_Year">1985</string>
</resources>