<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp"
            android:layout_margin="2dp"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <android.support.v7.widget.CardView
                android:elevation="2dp"
                android:layout_margin="2dp"
                app:cardCornerRadius="2dp"
                android:weightSum="1"
                android:dividerPadding="2dip"
                android:divider="?android:attr/dividerVertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/title"
                    android:layout_gravity="center"
                    android:textSize="24sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:padding="12dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="0.3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/point1_title"/>

            </android.support.v7.widget.CardView>




               <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.v7.widget.CardView
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    app:cardElevation="5dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="8dp"
                    android:layout_height="150dp">

                    <ImageView
                        android:id="@+id/img1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/point1_img1" />
                </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Brief Description : "
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_margin="8dp"
                />
                   <TextView
                       android:layout_width="wrap_content"
                       android:id="@+id/bb"
                       android:layout_height="wrap_content"
                       android:text="@string/point1_bb"
                       android:textSize="16sp"
                       android:layout_marginLeft="8dp"
                       />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Technical Description (Technical) : "
                       android:textSize="24sp"
                       android:textStyle="bold"
                       android:layout_margin="8dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/tf"
                       android:text="@string/point1_td"
                       android:textSize="16sp"
                       android:layout_marginLeft="8dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="How it is wommen friendly : "
                       android:textSize="24sp"
                       android:textStyle="bold"
                       android:layout_margin="8dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/wf"
                       android:text="@string/point1_wf"
                       android:textSize="16sp"
                       android:layout_marginLeft="8dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Performance : "
                       android:textSize="24sp"
                       android:textStyle="bold"
                       android:layout_margin="8dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:id="@+id/performance"
                       android:layout_height="wrap_content"
                       android:text="@string/point1_performance"
                       android:textSize="16sp"
                       android:layout_marginLeft="8dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Locale of Dessemination / Application : "
                       android:textSize="24sp"
                       android:textStyle="bold"
                       android:layout_margin="8dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:id="@+id/ld"
                       android:layout_height="wrap_content"
                       android:text="@string/point1_ld"
                       android:textSize="16sp"
                       android:layout_marginLeft="8dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Outcome/Impact/benefits : "
                       android:textSize="24sp"
                       android:textStyle="bold"
                       android:layout_margin="8dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:id="@+id/oib"
                       android:layout_height="wrap_content"
                       android:text="@string/point1_oib"
                       android:textSize="16sp"
                       android:layout_marginLeft="8dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Limitations if Any : "
                       android:textSize="24sp"
                       android:textStyle="bold"
                       android:layout_margin="8dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:id="@+id/limitation"
                       android:layout_height="wrap_content"
                       android:text="@string/point1_limitation"
                       android:textSize="16sp"
                       android:layout_marginLeft="8dp"
                       />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Source(Author/Organization) : "
                       android:textSize="24sp"
                       android:textStyle="bold"
                       android:layout_margin="8dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:id="@+id/source"
                       android:layout_height="wrap_content"
                       android:text="@string/point1_source"
                       android:textSize="16sp"
                       android:layout_marginLeft="8dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Developed / Tested / Refined "
                       android:textSize="24sp"
                       android:textStyle="bold"
                       android:layout_margin="8dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:id="@+id/dtr"
                       android:layout_height="wrap_content"
                       android:text="@string/point1_dtf"
                       android:textSize="16sp"
                       android:layout_marginLeft="8dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Year : "
                       android:textSize="24sp"
                       android:textStyle="bold"
                       android:layout_margin="8dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/year"
                       android:text="@string/point1_Year"
                       android:textSize="16sp"
                       android:layout_marginLeft="8dp"
                       />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Cost (initial investment and operating cost in Rs./h and Rs/Unit output) : "
                       android:textSize="24sp"
                       android:textStyle="bold"
                       android:layout_margin="8dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/cost"
                       android:text="@string/point1_Cost"
                       android:textSize="16sp"
                       android:layout_marginLeft="8dp"
                       />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Whether further study/ modification is required or not : "
                       android:textSize="24sp"
                       android:textStyle="bold"
                       android:layout_margin="8dp"
                       />
                   <TextView
                       android:layout_width="wrap_content"
                       android:id="@+id/fd"
                       android:layout_height="wrap_content"
                       android:text="@string/point1_fm"
                       android:textSize="16sp"
                       android:layout_marginLeft="8dp"
                       />



               </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>